--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
   share_plus: ^7.2.2
+  http: ^0.13.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
