--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,11 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
   share_plus: ^7.2.2
-  http: ^0.13.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
